--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,6 @@
         android:id="@+id/sign_up_"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FAF8EC"
         android:clipToOutline="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -23,10 +22,11 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="51dp"
-            android:layout_marginTop="43dp"
+            android:layout_marginTop="48dp"
             android:gravity="center_horizontal|top"
-            android:text="Sign up"
-            android:textAppearance="sign up"
+
+
+            android:text="@string/sign_up"
             android:textSize="34sp"
             android:textStyle="bold" />
 
@@ -78,15 +78,17 @@
             android:id="@+id/SignUp_Button"
             android:layout_width="360dp"
             android:layout_height="80dp"
-            android:layout_below="@+id/textView"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="622dp"
             android:layout_marginEnd="24dp"
-            android:background="#F9B672"
+            android:background="#FFF9B672"
             android:text="Sign up"
             android:textColor="#000000"
+            android:textColorHighlight="#000000"
+            android:textColorLink="#FFF9B672"
             android:textSize="24sp" />
 
         <TextView
